--- a/profile.html
+++ b/profile.html
@@ -19,8 +19,8 @@
             <h1>SampleCompany</h1>
             <nav id="header_nav">
                 <ul id="header_nav_list">
-                    <li><a class="navlist" href="http://corporate.yomileeblog.com/">ホーム</a></li>
-                    <li><a class="navlist" href="http://corporate.yomileeblog.com/profile.html">プロフィール</a></li>
+                    <li><a class="navlist" href="./index.html">ホーム</a></li>
+                    <li><a class="navlist" href="./profile.html">プロフィール</a></li>
                     <li><a class="navlist" href="https://google.com" target="_blank">サービス</a></li>
                     <li><a class="navlist" href="https://google.com" target="_blank">サイトマップ</a></li>
                 </ul>
