--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 		<script src="JavaScript.js"></script>
         <!-- レスポンシブ用 -->
-        <!-- <meta name=”viewport” content=”width=device-width,initial-scale=1.0″> -->
-        
+        <meta name="viewport" content="width=device-width,initial-scale=1">
 	</head>
     <body>
-        
 		<!----- ヘッダー ----->
 		<header>
             <div id="headerDiv">
