--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 		<script src="JavaScript.js"></script>
         <!-- レスポンシブ用 -->
-        <!-- <meta name=”viewport” content=”width=device-width,initial-scale=1.0″> -->
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         
 	</head>
     <body>
@@ -35,62 +35,51 @@
         </header>
 		<!----- ヘッダー END ----->
 
-        <div id ="TopImageBox">
-            <img src="Image/SlideShow001.JPG" alt="" id="TopImage">
-        </div>
-        <!-- <div id="thumbArea">
-            <img src="image/SlideShow001_s.JPG" class="thumb">
-            <img src="image/SlideShow002_s.JPG" class="thumb">
-            <img src="image/SlideShow003_s.JPG" class="thumb">
-            <img src="image/SlideShow004_s.JPG" class="thumb">
-        </div> -->
-		
+
 		<!----- メインコンテンツ ----->
 		<main>
-            <div id="onboarding1">
-                <img src="Image/photo001.jpg" alt="" class="onboarding_photo">
-                <div class="onboarding_textbox">
-                    <H2>ラテアート</H2>
-                    <p>おいしい</p>
+            <div id ="header_hide">
+            </div>
+            <div id="profileBox">
+                <div id ="profileBox1">
+                </div>
+                <div id ="profileBox2">
                 </div>
             </div>
 
-            <div id="portfolio_box">
-                <h2>ポートフォリオ一覧</h2>
-                <div id="portfolio_listing_box">
-                    <div class="portfolio_card">
-                        <a>sampleサイト1</a>
-                    </div>
-                    <div class="portfolio_card">
-                        <a>sampleサイト2</a>
-                    </div>
-                    <div class="portfolio_card">
-                        <a>sampleサイト3</a>
-                    </div>
-                </div>
-                <a class="roundButton">すべてのポートフォリオを見る</a>
-            </div>
 
-
-
-            <div>
-                <h2>私たちにできること</h2>
-                <div class="scroll-fade-side">
-                    <p>私たちは開発のプロフェッショナルですフェイドインします</p>
-                </div>
-            </div>
-
-            <h2>私たちにできること</h2>
-            <div class="scroll-fade-side">
+            <div id="profile_history">
+                <h2>経歴</h2>
                 <p>
-                    私たちは開発のプロフェッショナルですフェイドインします
+                    理系大学院卒
+                    東証プライムIT企業勤務    
                 </p>
             </div>
-
-			<section>
-				<h2>タイトル</h2>
-				<p>コンテンツの内容</p>
-			</section>
+            <div>
+                <h2>スキル・資格</h2>
+                <p>
+                    MATLAB 5年
+                </p>
+            </div>
+            <div>
+                <h2>Contact</h2>
+                <img src="/Image/DSC_0097.JPG" alt="" class="TopImage">
+            </div>
+        
+            <div>
+                <h2>SNS</h2>
+                <div class="portfolio_card">
+                    <img src="Image/twitter.jpg" alt="" class="card_img">
+                    a
+                </div>
+                <div class="card">
+                    <img src="Image/instagram.jpg" alt="" class="card_img">
+                </div>
+                <div id="portfolio_card" >
+                    im
+                </div>
+                <div id="portfolio_card"></div>
+            </div>
 		</main>
 		<!----- メインコンテンツ END ----->
 		
